--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
 * {
   margin: 0;
@@ -6,13 +7,14 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  font-family: "Rubik", sans-serif;
 }
 
 body {
   min-height: 100vh;
-  color: $color-black;
-  background: $color-white;
-  font-family:
+  color: color("black");
+  background: color("white");
+  font-family: "Rubik", 
     Inter,
     -apple-system,
     BlinkMacSystemFont,
@@ -28,4 +30,19 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 62.5%;
+
+  main {
+    display: flex;
+    flex-direction: column;
+    max-width: 50rem;
+    width: 100%;
+    margin: 0 auto;
+    padding: 4rem 1.6rem;
+  }
+}
+
+.container {
+  max-width: 110rem;
+  margin: 0 auto;
 }
