--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -3,7 +3,7 @@ $colors: (
     "white": #fcfaff,
     "darkgray": #9b9b9b,
     "gray": #a8a7a7,
-    "ligthGray": #f9f9f9,
+    "ligthGray": #f4f3fb,
     "black": #151515,
     "yellow": #ffbe0b,
     "orange": #fb5607,
