--- a/frontend/src/views/home.scss
+++ b/frontend/src/views/home.scss
@@ -1,5 +1,72 @@
 main {
-    h5 {
-      text-align: center;
+  h5 {
+    margin: 1rem 0 2rem 0;
+    font-size: 2.5rem;
+    font-weight: 500;
+  }
+
+  .btn-add-task {
+    margin-bottom: 1rem;
+  }
+
+  span {
+    margin-left: auto;
+    margin-bottom: 1rem;
+  }
+
+    .todo-card {
+      border: 1px solid #ccc;
+      border-radius: 0.5rem;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      display: flex;
+      align-items: center;
+      background-color: color("ligthGray");
+  
+      .task-details {
+          display: flex;
+          flex-direction: column;
+          gap: 0.5rem;
+          margin: 0 1rem;
+  
+          .q-toggle {
+              margin-left: -1rem;
+          }
+  
+          .task-title {
+              font-size: 1.2rem;
+              font-weight: 500;
+              margin-right: 1rem;
+              line-height: 1.2em;
+          }
+  
+          .task-description {
+              margin: 0;
+          }
+      }
+  
+      .action-buttons {
+          margin-left: auto;
+          display: flex;
+          align-items: center;
+          gap: 0.5rem; 
+      }  
+  }
+
+  .q-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  
+    .q-input,
+    .toggle {
+      margin-bottom: 1rem;
+      width: 100%
     }
+  
+    .btn-submit {
+      margin-top: 1rem;
+      align-self: flex-end; 
+    }
+  }
 }
